--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.31.10",
+    "@clerk/nextjs": "^6.36.0",
     "@clerk/themes": "^2.4.18",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -26,7 +26,7 @@
     "fabric": "^6.7.1",
     "imagekit": "^6.0.0",
     "lucide-react": "^0.543.0",
-    "next": "15.5.2",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
